chore: configurando react native firebase

--- a/app.json
+++ b/app.json
@@ -5,6 +5,17 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
+    ],
+    "android": {
+      "googleServicesFile": "./google-services.json",
+      "package": "com.rockethelp"
+    },
+    "ios": {
+      "googleServicesFile": "./GoogleService-Info.plist",
+      "bundleIdentifier": "com.rockethelp"
+    },
+    "plugins": [
+      "@react-native-firebase/app"
     ]
   }
 }
